LPS-77699 Update Translations

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -2452,7 +2452,7 @@ cab=Cabina
 cache-actions=Accions de memòria cau
 cache-control=Control de la memòria cau
 cache-control-configuration-name=Control de memòria cau
-cache-control-description=Set the cache control policy for documents with view permissions for guests. (Automatic Copy)
+cache-control-description=Establiu la política de control de la memòria cau per als documents amb permisos de visualització per als convidats.
 cache-data-on-the-first-request=Dades de la memòria cau en la primera sol·licitud.
 cache-dir-clean-up-expunge=Eliminació de la neteja del directori de la memòria cau
 cache-dir-clean-up-expunge-help=Estableix el nombre de dies que un fitxer es guarda a la memòria cau.
