--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -2452,7 +2452,7 @@ cab=Kab
 cache-actions=Zwischenspeicheroptionen
 cache-control=Cachesteuerung
 cache-control-configuration-name=Cachesteuerung
-cache-control-description=Set the cache control policy for documents with view permissions for guests. (Automatic Copy)
+cache-control-description=Legen Sie die Cache-Kontrollrichtlinie für Dokumente mit Ansichtsrechten für Gäste fest.
 cache-data-on-the-first-request=Zwischenspeichern von Daten bei der ersten Anforderung.
 cache-dir-clean-up-expunge=Aufräumen und Löschen im Cache-Directory
 cache-dir-clean-up-expunge-help=Legen Sie die Anzahl der Tage fest, für die eine Datei im Cache bleibt.
