--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -2452,7 +2452,7 @@ cab=Cabina
 cache-actions=Acciones de cacheado
 cache-control=Control de caché
 cache-control-configuration-name=Control de caché
-cache-control-description=Set the cache control policy for documents with view permissions for guests. (Automatic Copy)
+cache-control-description=Establezca la directiva de control de caché para documentos con permisos de vista para invitados.
 cache-data-on-the-first-request=Cache de datos en la primera petición.
 cache-dir-clean-up-expunge=Borrado de limpieza de directorio de caché
 cache-dir-clean-up-expunge-help=Establece el número de días en que se mantiene un archivo en la caché.
