--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -2452,7 +2452,7 @@ cab=ohjaamo
 cache-actions=Välimuistitoiminnat
 cache-control=Välimuistin hallinta
 cache-control-configuration-name=Välimuistin hallinta
-cache-control-description=Set the cache control policy for documents with view permissions for guests. (Automatic Copy)
+cache-control-description=Aseta välimuistinhallintakäytäntö asiakirjoille, jossa on tarkasteluoikeudet vieraille.
 cache-data-on-the-first-request=Välimuistitiedot ensimmäisellä pyynnöllä.
 cache-dir-clean-up-expunge=Välimuistihakemiston Puhdistuspyyhintä
 cache-dir-clean-up-expunge-help=Määritä päivien määrä, jonka ajan tiedosto pidetään välimuistissa.
