--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -2452,7 +2452,7 @@ cab=Taxi
 cache-actions=Actions du cache
 cache-control=Contrôle du cache
 cache-control-configuration-name=Contrôle du cache
-cache-control-description=Set the cache control policy for documents with view permissions for guests. (Automatic Copy)
+cache-control-description=Définissez une politique de contrôle du cache pour les documents avec des autorisations d'affichage pour les invités.
 cache-data-on-the-first-request=Données du cache de la première demande.
 cache-dir-clean-up-expunge=Purger le répertoire du cache
 cache-dir-clean-up-expunge-help=Définir le nombre de jours de conservation d'un fichier dans le cache.
