--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -2452,7 +2452,7 @@ cab=Cab
 cache-actions=キャッシュ動作
 cache-control=キャッシュ制御
 cache-control-configuration-name=キャッシュ制御
-cache-control-description=Set the cache control policy for documents with view permissions for guests. (Automatic Copy)
+cache-control-description=ゲストが表示権限を持つドキュメントのキャッシュ制御ポリシーを設定します。
 cache-data-on-the-first-request=初回リクエスト時にデータをキャッシュする
 cache-dir-clean-up-expunge=キャッシュディレクトリのデータ保持日数
 cache-dir-clean-up-expunge-help=ファイルキャッシュの保持日数を設定してください。
