--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -2452,7 +2452,7 @@ cab=出租车
 cache-actions=缓存操作
 cache-control=缓存控制
 cache-control-configuration-name=缓存控制
-cache-control-description=Set the cache control policy for documents with view permissions for guests. (Automatic Copy)
+cache-control-description=为访客设置具有查看权限的文档的缓存控制策略。
 cache-data-on-the-first-request=在首次请求时缓存数据。
 cache-dir-clean-up-expunge=缓存目录清理删除
 cache-dir-clean-up-expunge-help=设置文件在缓存中保存的天数。
