--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -2452,7 +2452,7 @@ cab=كابينة
 cache-actions=إجراءات التخزين المؤقت
 cache-control=عنصر تحكم ذاكرة التخزين المؤقت
 cache-control-configuration-name=عنصر تحكم ذاكرة التخزين المؤقت
-cache-control-description=Set the cache control policy for documents with view permissions for guests. (Automatic Copy)
+cache-control-description=تعيين سياسة التحكم في ذاكرة التخزين المؤقت للمستندات مع أذونات العرض للضيوف.
 cache-data-on-the-first-request=بيانات ذاكرة التخزين المؤقت على الطلب الأول.
 cache-dir-clean-up-expunge=مسح دليل التخزين المؤقت لـ Expunge
 cache-dir-clean-up-expunge-help=حدد عدد الأيام التي يحتفظ بها الملف في ذاكرة التخزين المؤقت.
