--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -2452,7 +2452,7 @@ cab=taxi
 cache-actions=Gyorsítótár tevékenységek
 cache-control=Gyorsítótár vezérlése
 cache-control-configuration-name=Gyorsítótár vezérlése
-cache-control-description=Set the cache control policy for documents with view permissions for guests. (Automatic Copy)
+cache-control-description=Határozzon meg gyorsítótár-vezérlő politikát a dokumentumokhoz megtekintési jogosultsággal rendelkező vendégek számára.
 cache-data-on-the-first-request=Gyorsítótárazza az adatot az első kérésre.
 cache-dir-clean-up-expunge=Gyorsítótár könyvtárának tisztítása törléssel
 cache-dir-clean-up-expunge-help=Állítsa be a napok számát, amíg egy fájl a gyorsítótárban marad.
